Compiler/test_inputs/invalid/14_additional_type_annotation.mt
@triton.jit
def typed(x: int): {
  y = x;
}
